[package]
name = "maple"
version = "0.0.1"
edition = "2021"
description = "code-symbol-graph: always-fresh code symbol map for byte-sized subagent context bundles"
license = "Apache-2.0"
repository = "https://github.com/yonk-labs/maple"
readme = "README.md"
keywords = ["code-graph", "llm", "agents", "tree-sitter", "context"]
categories = ["command-line-utilities", "development-tools"]

# tree-sitter and tree-sitter-python must be ABI-compatible; if `cargo build` errors on a version
# mismatch, align them (the grammar crate's tree-sitter dep must match the tree-sitter version).
[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }  # bundled = compile SQLite, no system dep
rayon = "1"  # T13: parallel parse (CPU-bound file read + tree-sitter); SQLite writes stay single-threaded

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "maple"
path = "src/main.rs"
