[package]
name = "maple"
version = "0.0.1"
edition = "2021"
description = "code-symbol-graph: always-fresh code symbol map for byte-sized subagent context bundles"
license = "Apache-2.0"
repository = "https://github.com/yonk-labs/maple"
readme = "README.md"
keywords = ["code-graph", "llm", "agents", "tree-sitter", "context"]
categories = ["command-line-utilities", "development-tools"]

# L1.1: grammar crates all resolve to one shared `tree-sitter-language` v0.1.x ABI shim (see
# `cargo tree -i tree-sitter-language`) regardless of their own declared `tree-sitter` version, so no
# workspace `tree-sitter` bump was needed to add the 8 new languages — tree-sitter-python (0.23)
# stayed untouched. If a future grammar crate breaks that shim compatibility, `cargo build` fails
# with a `Language`/`LanguageFn` type mismatch; resolve by bumping `tree-sitter` and re-checking
# `cargo tree -i tree-sitter-language` for a single unified version.
[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }  # bundled = compile SQLite, no system dep
rayon = "1"  # T13: parallel parse (CPU-bound file read + tree-sitter); SQLite writes stay single-threaded

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "maple"
path = "src/main.rs"
